day-168-capstone/k8s/sandbox-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  sandbox-deployment
  labels:
    name:  sandbox-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandbox
  template:
    metadata:
      labels:
        app:  sandbox
    spec:
      serviceAccountName: resource-manager
      containers:
      - image:  sandbox
        imagePullPolicy: Always
        name:  main-sandbox-container
        resources:
          requests:
            cpu: "250m"
            memory: "250Mi"
          limits: 
            cpu: "500m"
            memory: "400Mi"
        livenessProbe:
          httpGet:
            path: /api/sandbox/health
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/sandbox/health
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10       
        ports:
        - containerPort:  3000
          name:  http
